--- a/app/res/layout/custom_sticker_fragment_layout.xml
+++ b/app/res/layout/custom_sticker_fragment_layout.xml
@@ -38,7 +38,7 @@
         android:layout_width="match_parent"
         android:layout_height="49dp"
         android:layout_alignParentBottom="true"
-        android:background="@color/lsq_background_editor_bottom_bar"
+        android:background="@color/green_common"
         android:orientation="horizontal" >
 
         <org.lasque.tusdk.core.view.widget.button.TuSdkImageButton
