--- a/app/res/values/colors.xml
+++ b/app/res/values/colors.xml
@@ -14,6 +14,10 @@
     <color name="green_common">#61ded3</color>
     <color name="green_common2">#28bbb0</color>
 
+    <color name="white_common">#f5f5f5</color>
+    <color name="gray_common">#999999</color>
+    <color name="black_common">#333333</color>
+
 
     <!-- flash -->
     <color name="demo_flash_normal">#fff</color>
