--- a/app/res/layout/custom_parameter_config_view.xml
+++ b/app/res/layout/custom_parameter_config_view.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<org.lasque.tusdk.impl.components.widget.filter.ParameterConfigView xmlns:android="http://schemas.android.com/apk/res/android"
+<!--<org.lasque.tusdk.impl.components.widget.filter.ParameterConfigView-->
+<com.share.photoshare.custom.CustomParameterConfigView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/green_common2"
@@ -78,4 +80,4 @@
 
     </RelativeLayout>
 
-</org.lasque.tusdk.impl.components.widget.filter.ParameterConfigView>
+</com.share.photoshare.custom.CustomParameterConfigView>
