编辑照片界面修改

--- a/app/res/layout/custom_textedit_fragment_layout.xml
+++ b/app/res/layout/custom_textedit_fragment_layout.xml
@@ -2,39 +2,21 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/lsq_background_editor" >
+                android:background="@color/gray_common2" >
 
 
 
-    <include
-        android:id="@+id/lsq_param_config_view"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:layout_above="@+id/lsq_bottomBar"
-        layout="@layout/tusdk_impl_component_widget_parameter_config_view" />
+    <!--<include-->
+        <!---->
+        <!--android:id="@+id/lsq_param_config_view"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="80dp"-->
+        <!--android:layout_above="@+id/lsq_bottomBar"-->
+        <!--layout="@layout/tusdk_impl_component_widget_parameter_config_view" />-->
 
-
-    <LinearLayout
-
-        android:orientation="vertical"
-        android:id="@+id/lsq_option_wrap"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:layout_above="@+id/lsq_bottomBar"
-        android:background="@color/lsq_background_editor">
-    </LinearLayout>
-
-    <LinearLayout
-
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:layout_above="@+id/lsq_bottomBar"
-        android:background="@color/lsq_background_editor">
-    </LinearLayout>
 
     <RelativeLayout
-
+        android:visibility="gone"
         android:id="@+id/lsq_bottomBar"
         android:layout_width="match_parent"
         android:layout_height="49dp"
@@ -117,8 +99,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
-        android:layout_above="@+id/lsq_config_bottomBar"
-        android:background="@color/lsq_background_editor">
+        android:layout_above="@+id/lsq_config_bottomBar">
 
 
         <RelativeLayout
@@ -128,7 +109,6 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:background="@color/lsq_background_editor"
                 android:layout_centerInParent="true"
                 android:id="@+id/lsq_imageView"
                 android:scaleType="fitCenter"
