--- a/app/res/layout/custom_multiple_fragment_layout.xml
+++ b/app/res/layout/custom_multiple_fragment_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lsq_background_editor" >
+    android:background="@color/gray_common2" >
 
     <HorizontalScrollView
         android:id="@+id/lsq_bar_bottomBar"
