--- a/app/res/layout/custom_sticker_fragment_layout.xml
+++ b/app/res/layout/custom_sticker_fragment_layout.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lsq_background_editor" >
+    android:background="@color/gray_common2" >
 
 
     <ImageView
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/lsq_sticker_bar"
-        android:background="@color/lsq_background_editor"
+        android:background="@color/gray_common2"
         android:scaleType="fitCenter" />
 
     <org.lasque.tusdk.impl.components.widget.sticker.StickerView
