--- a/app/res/values/colors.xml
+++ b/app/res/values/colors.xml
@@ -16,6 +16,7 @@
 
     <color name="white_common">#f5f5f5</color>
     <color name="gray_common">#999999</color>
+    <color name="gray_common2">#bbbbbb</color>
     <color name="black_common">#333333</color>
 
 
