--- a/TuSDK/res/values/colors.xml
+++ b/TuSDK/res/values/colors.xml
@@ -7,6 +7,7 @@
 
     <color name="amber_white_common">#f5f5f5</color>
     <color name="amber_gray_common">#999999</color>
+    <color name="amber_gray_common2">#bbbbbb</color>
     <color name="amber_black_common">#333333</color>
 
     <!-- color -->
