--- a/app/res/layout/custom_sticker_sticker_bar.xml
+++ b/app/res/layout/custom_sticker_sticker_bar.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white_common"
+    android:background="@color/green_common2"
     android:orientation="vertical" >
 
     <org.lasque.tusdk.core.view.TuSdkLinearLayout
