--- a/app/res/values/styles.xml
+++ b/app/res/values/styles.xml
@@ -23,4 +23,8 @@
         <item name="android:drawablePadding">16dp</item>
     </style>
 
+    <style name="textsticker_dialog" parent="android:Theme.Translucent.NoTitleBar">
+        <item name="android:windowNoTitle">true</item>
+    </style>
+
 </resources>
