--- a/app/res/values/styles.xml
+++ b/app/res/values/styles.xml
@@ -1,5 +1,9 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <style name="AppCompatTheme" parent="AppTheme">
+
+    </style>
+
     <style name="AppBaseTheme" parent="android:Theme.Light.NoTitleBar"></style>
 
     <!-- Application theme -->
