--- a/app/res/values/dimens.xml
+++ b/app/res/values/dimens.xml
@@ -19,5 +19,12 @@
     <dimen name="actionbar_item_height">45dip</dimen>
     <dimen name="actionbar_item_width">45dip</dimen>
 
-
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="default_slider_height">36dp</dimen>
+    <dimen name="default_slider_margin">4dp</dimen>
+    <dimen name="default_slider_bar_height">4dp</dimen>
+    <dimen name="default_slider_handler_radius">10dp</dimen>
+    <dimen name="default_padding_side">10dp</dimen>
+    <dimen name="default_preview_height">40dp</dimen>
+    <dimen name="default_preview_image_height">36dp</dimen>
 </resources>
