--- a/TuSDK/res/layout/tusdk_impl_component_edit_cuter_fragment.xml
+++ b/TuSDK/res/layout/tusdk_impl_component_edit_cuter_fragment.xml
@@ -8,8 +8,8 @@
         android:id="@+id/lsq_imageWrapView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/lsq_optionBar"
-        android:background="@color/amber_gray_common2"
+        android:layout_above="@+id/lsq_option_wrap"
+        android:background="@color/lsq_background_editor"
         android:clipChildren="false"
         android:clipToPadding="false" >
     </RelativeLayout>
@@ -18,15 +18,21 @@
         android:id="@+id/lsq_cutRegionView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/lsq_optionBar" />
+        android:layout_above="@+id/lsq_option_wrap" />
 
-    <LinearLayout
-        android:id="@+id/lsq_optionBar"
+    <HorizontalScrollView
+        android:id="@+id/lsq_option_wrap"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_above="@+id/lsq_bottomBar"
+        android:background="@color/lsq_background_option_bar" >
+    
+    	<LinearLayout
+        android:id="@+id/lsq_optionBar"
+        android:layout_width="wrap_content"
+        android:layout_height="80dp"
         android:gravity="center"
-        android:background="@color/amber_green_common2"
+        android:background="@color/lsq_background_option_bar"
         android:orientation="horizontal" >
 
         <org.lasque.tusdk.core.view.widget.button.TuSdkTextButton
@@ -58,14 +64,15 @@
             style="@style/lsq_edit_entryOptionButton"
             android:drawableTop="@drawable/lsq_style_default_ratio_9_16"
             android:text="@string/lsq_edit_cuter_ratio_9_16" />
-    </LinearLayout>
-
+    	</LinearLayout>
+    </HorizontalScrollView>
+    	
     <LinearLayout
         android:id="@+id/lsq_bottomBar"
         android:layout_width="match_parent"
         android:layout_height="49dp"
         android:layout_alignParentBottom="true"
-        android:background="@color/amber_green_common"
+        android:background="@color/lsq_background_editor_bottom_bar"
         android:orientation="horizontal" >
 
         <org.lasque.tusdk.core.view.widget.button.TuSdkImageButton
