--- a/app/res/layout/custom_textedit_fragment_layout.xml
+++ b/app/res/layout/custom_textedit_fragment_layout.xml
@@ -36,7 +36,7 @@
             android:src="@drawable/img_textsticker"
             android:layout_height="match_parent"/>
 
-        <com.mixcolours.photoshare.CustomColorImageView
+        <com.mixcolours.photoshare.custom.CustomColorImageView
 
             android:layout_weight="1"
             android:id="@+id/lsq_colorButton"
